--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <h1>Wine 列表（来自 Wine 运行器）</h1>
     <p>点击下方链接下载编译好的 7z 包</p>
-    <h3>更新时间：2023年1月23日 9:43:59</h3>
+    <h3>推荐在 Wine 运行器内安装</h3>
+    <p><img src='images/截图_installwine_20230123094608.png'></p>
+    <hr/>
+    <h3>更新时间：2023年1月23日 9:48:23</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-x86_64.7z'>wine-staging-8.0-rc5-debian10-x86_64</a></p>
