--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年1月23日 22:30:17</h3>
+    <h3>更新时间：2023年1月24日 12:13:21</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5.7z'>wine-staging-8.0-rc5</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-devel-8.0-rc5.7z'>wine-devel-8.0-rc5</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-x86_64.7z'>wine-staging-8.0-rc5-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-amd64.7z'>wine-staging-8.0-rc5-debian10-amd64（只有64位的，无32位）</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-i386.7z'>wine-staging-8.0-rc5-debian10-i386（只有32位的，无64位）</a></p>
