仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Wine 列表（来自 Wine 运行器）</h1>
     <p>点击下方链接下载编译好的 7z 包</p>
     <h3>推荐在 Wine 运行器内安装</h3>
-    <p><img src='images/截图_installwine_20230123094608.png'></p>
+    <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年1月26日 12:10:19</h3>
+    <h3>更新时间：2023年1月26日 22:30:18</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
@@ -93,7 +93,7 @@
     <p><a href='https://gitee.com/gfdgd-xi-org/deep-wine-runner/stargazers'><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/badge/star.svg?theme=dark' alt='star'></img></a><a href='https://gitee.com/gfdgd-xi-org/deep-wine-runner/members'><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/badge/fork.svg?theme=dark' alt='fork'></img></a></p>
     <hr/>
     <h2>Wine 运行器</h2>
-    <p><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/widgets/widget_card.svg?colors=eae9d7,2e2f29,272822,484a45,eae9d7,747571'></p>
+    <p style='overflow: auto;'><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/widgets/widget_card.svg?colors=eae9d7,2e2f29,272822,484a45,eae9d7,747571'></p>
     <hr/>
     <h1 id="copyright">©2020~2023 gfdgd xi、为什么您不喜欢熊出没和阿布呢</h1>
 </body>
