--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年1月27日 12:10:17</h3>
+    <h3>更新时间：2023年1月27日 22:30:17</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0-debian10-x86_64.7z'>wine-stable-8.0-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0-debian10-amd64.7z'>wine-stable-8.0-debian10-amd64（只有64位的，无32位）</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0-debian10-i386.7z'>wine-stable-8.0-debian10-i386（只有32位的，无64位）</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.0-armhf.7z'>wine-ce-8.0-armhf</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5.7z'>wine-staging-8.0-rc5</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-devel-8.0-rc5.7z'>wine-devel-8.0-rc5</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-x86_64.7z'>wine-staging-8.0-rc5-debian10-x86_64</a></p>
@@ -27,11 +28,13 @@
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-i386.7z'>wine-staging-8.0-rc5-debian10-i386（只有32位的，无64位）</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master//wine-staging-8.0-rc5-ubuntu20.04-aarch64.7z'>/wine-staging-8.0-rc5-ubuntu20.04-aarch64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc5-debian10-armv71.7z'>wine-staging-8.0-rc5-debian10-armv71</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.0-rc5-armhf.7z'>wine-ce-8.0-rc5-armhf</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc4.7z'>wine-staging-8.0-rc4</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-devel-8.0-rc4.7z'>wine-devel-8.0-rc4</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc4-debian10-x86_64.7z'>wine-staging-8.0-rc4-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc4-debian10-i386.7z'>wine-staging-8.0-rc4-debian10-i386（只有32位的，无64位）</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc4-debian10-amd64.7z'>wine-staging-8.0-rc4-debian10-amd64（只有64位的，无32位）</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.0-rc4-armhf.7z'>wine-ce-8.0-rc4-armhf</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc3.7z'>wine-staging-8.0-rc3-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/lutris-fshack-7.2.7z'>lutris-fshack-7.2</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.0-rc2.7z'>wine-staging-8.0-rc2-debian10-x86_64</a></p>
