--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年2月4日 12:10:17</h3>
+    <h3>更新时间：2023年2月4日 22:30:17</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
@@ -47,6 +47,7 @@
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-7.0.7z'>wine-stable-7.0</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.22.7z'>wine-staging-7.22</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.22-debian10.7z'>wine-staging-7.22-debian10-x86_64</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.22-debian10-i386.7z'>wine-staging-7.22-debian10-i386</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-devel-7.22-debian10-x86_64.7z'>wine-devel-7.22-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.21.7z'>wine-staging-7.21</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.21-debian10.7z'>wine-staging-7.21-debian10</a></p>
@@ -69,6 +70,7 @@
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.2.7z'>wine-staging-7.2</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-7.0.7z'>wine-staging-7.0</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/deepin-wine6-stable.7z'>deepin-wine6-stable</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/lutris-6.4-i386.7z'>lutris-6.4-i386</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-6.0.4.7z'>wine-stable-6.0.4</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-6.18.7z'>wine-staging-6.18</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-6.7.7z'>wine-staging-6.7</a></p>
