仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年3月4日 14:57:28</h3>
+    <h3>更新时间：2023年3月10日 22:42:59</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.3-debian10-x86_64.7z'>wine-staging-8.3-debian10-x86_64</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.3-debian10-i386.7z'>wine-staging-8.3-debian10-i386</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.3-debian10-amd64.7z'>wine-staging-8.3-debian10-amd64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.2.7z'>wine-staging-8.2</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-devel-8.2.7z'>wine-devel-8.2</a></p>
