--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年4月13日 22:30:36</h3>
+    <h3>更新时间：2023年4月14日 2:10:22</h3>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
-    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.5-aarch64.7z'>wine-ce-8.5-aarch64</a></p>
-    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.5-riscv64.7z'>wine-ce-8.5-riscv64</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.5-debian10-x86_64.7z'>wine-staging-8.5-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.5-debian10-amd64.7z'>wine-staging-8.5-debian10-amd64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.5-debian10-i386.7z'>wine-staging-8.5-debian10-i386</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.5-aarch64.7z'>wine-ce-8.5-aarch64</a></p>
+    <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-ce-8.5-riscv64.7z'>wine-ce-8.5-riscv64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.4-debian10-x86_64.7z'>wine-staging-8.4-debian10-x86_64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.4-debian10-amd64.7z'>wine-staging-8.4-debian10-amd64</a></p>
     <p><a href='https://code.gitlink.org.cn/gfdgd_xi/wine-mirrors/raw/branch/master/wine-staging-8.4-debian10-i386.7z'>wine-staging-8.4-debian10-i386</a></p>
