仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年5月3日 12:12:18</h3>
+    <h3>更新时间：2023年5月3日 22:35:34</h3>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/spark-wine8-8.0/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
@@ -25,6 +25,8 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.7-debian10-x86_64/wine-staging-8.7-debian10-x86_64.7z'>wine-staging-8.7-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.7-debian10-amd64/wine-staging-8.7-debian10-amd64.7z'>wine-staging-8.7-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.7-debian10-i386/wine-staging-8.7-debian10-i386.7z'>wine-staging-8.7-debian10-i386</a></p>
+    <p><a href='http://wine.wine-runner.gfdgdxi.top/Wine/wine-ce-8.7-amd64.7z'>wine-ce-8.7-amd64</a></p>
+    <p><a href='http://wine.wine-runner.gfdgdxi.top/Wine/wine-ce-8.7-aarch64.7z'>wine-ce-8.7-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-x86_64/wine-staging-8.6-debian10-x86_64.7z'>wine-staging-8.6-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-amd64/wine-staging-8.6-debian10-amd64.7z'>wine-staging-8.6-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-i386/wine-staging-8.6-debian10-i386.7z'>wine-staging-8.6-debian10-i386</a></p>
@@ -102,7 +104,7 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/spark-wine7-devel-7.14/spark-wine7-devel-7.14.7z'>spark-wine7-devel-7.14</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-devel-7.12/wine-devel-7.12.7z'>wine-devel-7.12</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-devel-7.5/wine-devel-7.5.7z'>wine-devel-7.5</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-7.4/wine-staging-7.4.7z'>wine-staging-7.4</a></p>
+    <p><a href='http://wine.wine-runner.gfdgdxi.top/Wine/wine-staging-7.4.7z'>wine-staging-7.4</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-7.2/wine-staging-7.2.7z'>wine-staging-7.2</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-7.0/wine-staging-7.0.7z'>wine-staging-7.0</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/deepin-wine6-stable/deepin-wine6-stable.7z'>deepin-wine6-stable</a></p>
