仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年5月13日 12:10:27</h3>
+    <h3>更新时间：2023年5月13日 22:30:22</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
@@ -22,15 +22,19 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0.1-debian10-amd64/wine-stable-8.0.1-debian10-amd64.7z'>wine-stable-8.0.1-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0.1-debian10-i386/wine-stable-8.0.1-debian10-i386.7z'>wine-stable-8.0.1-debian10-i386</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-8.8-debian10-x86_64.7z'>wine-staging-8.8-debian10-x86_64</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.8-debian-amd64/wine-staging-8.8-debian-amd64.7z'>wine-staging-8.8-debian10-amd64</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.8-debian10-i386/wine-staging-8.8-debian10-i386.7z'>wine-staging-8.8-debian10-i386</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-8.7-debian10-x86_64.7z'>wine-staging-8.7-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.7-debian10-amd64/wine-staging-8.7-debian10-amd64.7z'>wine-staging-8.7-debian10-amd64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-8.7-debian10-i386.7z'>wine-staging-8.7-debian10-i386</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.8-ubuntu22.04-aarch64.7z'>wine-staging-8.8-ubuntu22.04-aarch64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.7-amd64.7z'>wine-ce-8.7-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.7-aarch64.7z'>wine-ce-8.7-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-x86_64/wine-staging-8.6-debian10-x86_64.7z'>wine-staging-8.6-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-amd64/wine-staging-8.6-debian10-amd64.7z'>wine-staging-8.6-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-i386/wine-staging-8.6-debian10-i386.7z'>wine-staging-8.6-debian10-i386</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-ubuntu22.04-aarch64/wine-staging-8.6-ubuntu22.04-aarch64.7z'>wine-staging-8.6-ubuntu22.04-aarch64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.6-ubuntu22.04-aarch64.7z'>wine-staging-8.6-ubuntu22.04-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.5-debian10-x86_64/wine-staging-8.5-debian10-x86_64.7z'>wine-staging-8.5-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.5-debian10-amd64/wine-staging-8.5-debian10-amd64.7z'>wine-staging-8.5-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.5-debian10-i386/wine-staging-8.5-debian10-i386.7z'>wine-staging-8.5-debian10-i386</a></p>
@@ -40,7 +44,7 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.4-debian10-amd64/wine-staging-8.4-debian10-amd64.7z'>wine-staging-8.4-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.4-debian10-i386/wine-staging-8.4-debian10-i386.7z'>wine-staging-8.4-debian10-i386</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.4-riscv64.7z'>wine-ce-8.4-riscv64</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.4-ubuntu20.04-aarch64/wine-staging-8.4-ubuntu20.04-aarch64.7z'>wine-staging-8.4-ubuntu20.04-aarch64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.4-ubuntu20.04-aarch64.7z'>wine-staging-8.4-ubuntu20.04-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.3/wine-staging-8.3.7z'>wine-staging-8.3</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.3-debian10-x86_64/wine-staging-8.3-debian10-x86_64.7z'>wine-staging-8.3-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.3-debian10-i386/wine-staging-8.3-debian10-i386.7z'>wine-staging-8.3-debian10-i386</a></p>
@@ -50,7 +54,7 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.2-debian10-x86_64/wine-staging-8.2-debian10-x86_64.7z'>wine-staging-8.2-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8/wine-staging-8.2-debian10-amd64'>wine-staging-8.2-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.2-debian10-i386/wine-staging-8.2-debian10-i386.7z'>wine-staging-8.2-debian10-i386</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.2-aarch64/wine-staging-8.2-aarch64.7z'>wine-staging-8.2-aarch64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.2-aarch64.7z'>wine-staging-8.2-aarch64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.2-riscv64.7z'>wine-ce-8.2-riscv64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.2-armhf.7z'>wine-ce-8.2-armhf</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1/wine-staging-8.1.7z'>wine-staging-8.1</a></p>
@@ -58,7 +62,7 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-debian10-amd64/wine-staging-8.1-debian10-amd64.7z'>wine-staging-8.1-debian10-amd64（只有64位的，无32位）</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-debian10-i386/wine-staging-8.1-debian10-i386.7z'>wine-staging-8.1-debian10-i386（只有32位的，无64位）</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.1-armhf.7z'>wine-ce-8.1-armhf</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-ubuntu20.04-aarch64/wine-staging-8.1-ubuntu20.04-aarch64.7z'>wine-staging-8.1-ubuntu20.04-aarch64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.1-ubuntu20.04-aarch64.7z'>wine-staging-8.1-ubuntu20.04-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-x86_64/wine-stable-8.0-debian10-x86_64.7z'>wine-stable-8.0-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-amd64/wine-stable-8.0-debian10-amd64.7z'>wine-stable-8.0-debian10-amd64（只有64位的，无32位）</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-i386/wine-stable-8.0-debian10-i386.7z'>wine-stable-8.0-debian10-i386（只有32位的，无64位）</a></p>
@@ -68,8 +72,8 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-x86_64/wine-staging-8.0-rc5-debian10-x86_64.7z'>wine-staging-8.0-rc5-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-amd64/wine-staging-8.0-rc5-debian10-amd64.7z'>wine-staging-8.0-rc5-debian10-amd64（只有64位的，无32位）</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-i386/wine-staging-8.0-rc5-debian10-i386.7z'>wine-staging-8.0-rc5-debian10-i386（只有32位的，无64位）</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-ubuntu20.04-aarch64//wine-staging-8.0-rc5-ubuntu20.04-aarch64.7z'>/wine-staging-8.0-rc5-ubuntu20.04-aarch64</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-armv71/wine-staging-8.0-rc5-debian10-armv71.7z'>wine-staging-8.0-rc5-debian10-armv71</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.0-rc5-ubuntu20.04-aarch64.7z'>wine-staging-8.0-rc5-ubuntu20.04-aarch64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.0-rc5-debian10-armv71.7z'>wine-staging-8.0-rc5-debian10-armv71</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.0-rc5-armhf.7z'>wine-ce-8.0-rc5-armhf</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc4/wine-staging-8.0-rc4.7z'>wine-staging-8.0-rc4</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-devel-8.0-rc4/wine-devel-8.0-rc4.7z'>wine-devel-8.0-rc4</a></p>
@@ -109,21 +113,21 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-7.0/wine-staging-7.0.7z'>wine-staging-7.0</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/deepin-wine6-stable.7z'>deepin-wine6-stable</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/lutris-6.4-i386.7z'>lutris-6.4-i386</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-6.0.4/wine-stable-6.0.4.7z'>wine-stable-6.0.4</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-6.0.4.7z'>wine-stable-6.0.4</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-6.18/wine-staging-6.18.7z'>wine-staging-6.18</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-6.7/wine-staging-6.7.7z'>wine-staging-6.7</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-6.1/wine-staging-6.1.7z'>wine-staging-6.1</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-6.0-amd64/wine-staging-6.0-amd64.7z'>wine-staging-6.0-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/deepin-wine5-stable.7z'>deepin-wine5-stable</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-5.0.4/wine-stable-5.0.4.7z'>wine-stable-5.0.4</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-5.0.4.7z'>wine-stable-5.0.4</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.22/wine-staging-5.22.7z'>wine-staging-5.22</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.1/wine-staging-5.1.7z'>wine-staging-5.1</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.0-rc4-amd64/wine-staging-5.0-rc4-amd64.7z'>wine-staging-5.0-rc4-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.0-rc4/wine-staging-5.0-rc4.7z'>wine-staging-5.0-rc4</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-4.0.4/wine-stable-4.0.4.7z'>wine-stable-4.0.4</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-4.0.4.7z'>wine-stable-4.0.4</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-4.2-i386.7z'>proton-4.2-i386</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-4.21/wine-staging-4.21.7z'>wine-staging-4.21</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-3.0.5/wine-stable-3.0.5.7z'>wine-stable-3.0.5</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-3.0.5.7z'>wine-stable-3.0.5</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-3.16-amd64.7z'>proton-3.16-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-3.16-i386.7z'>proton-3.16-i386</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-3.7-i386.7z'>proton-3.7-i386</a></p>
