--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年5月14日 12:10:15</h3>
+    <h3>更新时间：2023年5月14日 22:30:28</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
@@ -120,6 +120,9 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-6.0-amd64/wine-staging-6.0-amd64.7z'>wine-staging-6.0-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/deepin-wine5-stable.7z'>deepin-wine5-stable</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-5.0.4.7z'>wine-stable-5.0.4</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/proton-5.0-debian10-x86_64.7z'>proton-5.0-debian10-x86_64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-5.0-debian10-amd64.7z'>proton-5.0-debian10-amd64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-5.0-debian10-i386.7z'>proton-5.0-debian10-i386</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.22/wine-staging-5.22.7z'>wine-staging-5.22</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.1/wine-staging-5.1.7z'>wine-staging-5.1</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-5.0-rc4-amd64/wine-staging-5.0-rc4-amd64.7z'>wine-staging-5.0-rc4-amd64</a></p>
