--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年5月21日 15:53:17</h3>
+    <h3>更新时间：2023年5月21日 22:34:29</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
@@ -25,10 +25,12 @@
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-8.8-debian10-x86_64.7z'>wine-staging-8.8-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.8-debian-amd64/wine-staging-8.8-debian-amd64.7z'>wine-staging-8.8-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.8-debian10-i386/wine-staging-8.8-debian10-i386.7z'>wine-staging-8.8-debian10-i386</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.8-amd64.7z'>wine-ce-8.8-amd64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.8-riscv64.7z'>wine-ce-8.8-riscv64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.8-ubuntu22.04-aarch64.7z'>wine-staging-8.8-ubuntu22.04-aarch64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-8.7-debian10-x86_64.7z'>wine-staging-8.7-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.7-debian10-amd64/wine-staging-8.7-debian10-amd64.7z'>wine-staging-8.7-debian10-amd64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-8.7-debian10-i386.7z'>wine-staging-8.7-debian10-i386</a></p>
-    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.8-ubuntu22.04-aarch64.7z'>wine-staging-8.8-ubuntu22.04-aarch64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.7-amd64.7z'>wine-ce-8.7-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-ce-8.7-aarch64.7z'>wine-ce-8.7-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.6-debian10-x86_64/wine-staging-8.6-debian10-x86_64.7z'>wine-staging-8.6-debian10-x86_64</a></p>
