仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年5月27日 12:12:17</h3>
+    <h3>更新时间：2023年5月27日 22:35:4</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
@@ -137,6 +137,7 @@
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-4.2-i386.7z'>proton-4.2-i386</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-4.21/wine-staging-4.21.7z'>wine-staging-4.21</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-stable-3.0.5.7z'>wine-stable-3.0.5</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-stable-3.0.5-debian10-amd64.7z'>wine-stable-3.0.5-debian10-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-3.16-amd64.7z'>proton-3.16-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-3.16-i386.7z'>proton-3.16-i386</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/proton-3.7-i386.7z'>proton-3.7-i386</a></p>
