--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年6月10日 2:10:16</h3>
+    <h3>更新时间：2023年6月10日 12:22:38</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/spark-wine8-8.0.7z'>spark-wine8-8.0</a></p>
@@ -22,6 +22,10 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0.1-debian10-amd64/wine-stable-8.0.1-debian10-amd64.7z'>wine-stable-8.0.1-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0.1-debian10-i386/wine-stable-8.0.1-debian10-i386.7z'>wine-stable-8.0.1-debian10-i386</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0/wine-stable-8.0.7z'>wine-stable-8.0</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/wine-staging-8.10-debian10-x86_64.7z'>wine-staging-8.10-debian10-x86_64</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.10-debian10-amd64/wine-staging-8.10-debian10-amd64.7z'>wine-staging-8.10-debian10-amd64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.10-debian10-i386.7z'>wine-staging-8.10-debian10-i386</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.10-ubuntu22.04-aarch64.7z'>wine-staging-8.10-ubuntu22.04-aarch64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-2/-/raw/main/wine-staging-8.9-debian10-x86_64.7z'>wine-staging-8.9-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.9-debian10-amd64/wine-staging-8.9-debian10-amd64.7z'>wine-staging-8.9-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.9-debian10-i386/wine-staging-8.9-debian10-i386.7z'>wine-staging-8.9-debian10-i386</a></p>
