仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年7月7日 2:10:16</h3>
+    <h3>更新时间：2023年7月7日 22:30:51</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -110,6 +110,10 @@
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/lutris-fshack-7.2.7z'>lutris-fshack-7.2</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc2/wine-staging-8.0-rc2.7z'>wine-staging-8.0-rc2-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc1/wine-staging-8.0-rc1.7z'>wine-staging-8.0-rc1-debian10-x86_64</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/wine-stable-7.0.2-debian10-x86_64.7z'>wine-stable-7.0.2-debian10-x86_64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-wow64-7.0.2-debian10-amd64.7z'>wine-staging-wow64-7.0.2-debian10-amd64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-stable-7.0.2-debian10-amd64.7z'>wine-stable-7.0.2-debian10-amd64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-stable-7.0.2-debian10-i386.7z'>wine-stable-7.0.2-debian10-i386</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-7.0.1/wine-stable-7.0.1.7z'>wine-stable-7.0.1</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-7.0/wine-stable-7.0.7z'>wine-stable-7.0</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors/-/raw/main/wine-staging-7.22.7z'>wine-staging-7.22</a></p>
