仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年7月24日 22:30:51</h3>
+    <h3>更新时间：2023年7月26日 2:23:10</h3>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -34,6 +34,7 @@
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-4/-/raw/main/wine-staging-wow64-8.13-debian10-amd64.7z'>wine-staging-wow64-8.13-debian10-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.13-ubuntu22.04-aarch64.7z'>wine-staging-8.13-ubuntu22.04-aarch64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/wine-staging-8.12-debian10-x86_64.7z'>wine-staging-8.12-debian10-x86_64</a></p>
+    <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-lutris-GE-Proton8-12-x86_64.7z'>wine-lutris-GE-Proton8-12-x86_64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-3/-/raw/main/wine-staging-wow64-8.12-debian10-amd64.7z'>wine-staging-wow64-8.12-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.12-debian10-amd64/wine-staging-8.12-debian10-amd64.7z'>wine-staging-8.12-debian10-amd64</a></p>
     <p><a href='http://download0.wine.wine-runner.gfdgdxi.top/wine-staging-8.12-debian10-i386.7z'>wine-staging-8.12-debian10-i386</a></p>
